# shutdown-thing

./: Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
nix/: module.nix
src/: config.rs  handlers.rs  main.rs  models.rs
src/control/: dummy.rs  mod.rs  systemd.rs
